fixed overflow navbar issue with IE

--- a/themes/vatjss/sass/_navigation.scss
+++ b/themes/vatjss/sass/_navigation.scss
@@ -180,7 +180,7 @@ a {
 	top: 44px;
 	z-index: 100;
 	.site-header-container{
-		overflow: initial;
+		overflow: visible;
 	}
 	.vatjss-flex-container-no-wrap{
 		align-items: center;
